# openalexcli

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/openalexcli/: __main__.py  cli.py
src/openalexcli/api/: __init__.py  client.py
src/openalexcli/formatters/: __init__.py  table.py
src/openalexq/: __init__.py  __main__.py  cli.py
src/openalexq/api/: __init__.py  client.py
src/openalexq/formatters/: __init__.py  bibtex.py  json_fmt.py
tests/: test_openalexcli.py  test_openalexq.py
