[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openalexcli"
version = "0.1.3"
description = "Command-line interface for the OpenAlex API, designed for both human researchers and AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["openalex", "scholarly", "research", "cli", "bibliography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.scripts]
openalexcli = "openalexcli.cli:app"

[project.urls]
Documentation = "https://docs.openalex.org/"
Source = "https://github.com/mrshu/openalexcli"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/openalexcli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
